syntax = "proto3";

option java_multiple_files = true;
option java_package = "carpark.service";
option java_outer_classname = "CarparkImpl";
 
package carpark;

service carparkServices {
	rpc AccessCarpark(AccessRequest) returns (AccessResponse){};
	rpc LeaveCarpark(LeaveRequest) returns (LeaveResponse){};
	rpc GetNumAvailSpaces(SpacesRequest) returns (stream SpacesResponse){};
}

message AccessRequest {
	string idNumber = 1;
}

message AccessResponse {
	string message = 1;
}

message LeaveRequest{
}

message LeaveResponse {
	string message = 1;
}

message SpacesRequest {
}

message SpacesResponse {
	int32 message = 1;
}
